src/objects/Speaker__c.object
<CustomObject>
    <description>MG_Speaker: All National and Local Speakers</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>